testdata/invalid/capability-value-conflict/events/events.hzn
package events

capability ExecObserveDep danger observe = "kernel.process.exec.observe"

@capability(ExecObserveDep)
@tracepoint("sched:sched_process_exec")
func OnExecDep(ctx tracepoint.Exec) i32 {
    return 0
}
